# TradeAutomation

./: .coveragerc  .gitignore  AGENTS.md  PROJECT_STATE.md  README.md  SESSION_HANDOFF.md  config.local.example.json  config.lpfs_icmarkets_raw_spread.example.json  config.lpfs_new_mt5_account.example.json  requirements-dev.txt
concepts/force_strike_pattern_lab/: PROJECT_STATE.md  pyproject.toml
concepts/force_strike_pattern_lab/docs/: force_strike_pattern_spec.md
concepts/force_strike_pattern_lab/tests/: test_edge_cases.py  test_patterns.py  test_tradingview_indicator.py
concepts/force_strike_pattern_lab/tradingview/: README.md  force_strike_pattern.pine
concepts/majority_flush_lab/: PROJECT_STATE.md  pyproject.toml
concepts/majority_flush_lab/docs/: majority_flush_spec.md
concepts/majority_flush_lab/tests/: test_edge_cases.py  test_flush.py  test_tradingview_indicator.py
concepts/majority_flush_lab/tradingview/: README.md  majority_flush.pine
strategies/lp_force_strike_strategy_lab/: PROJECT_STATE.md  START_HERE.md  pyproject.toml
strategies/lp_force_strike_strategy_lab/docs/: experiment_history.md  lp_force_strike_experiment_v1.md  lp_force_strike_experiment_v10_portfolio_baseline.md  lp_force_strike_experiment_v11_timeframe_mix.md  lp_force_strike_experiment_v12_lp_pivot_finalization.md  lp_force_strike_experiment_v13_relaxed_portfolio_selection.md  lp_force_strike_experiment_v14_risk_sizing_drawdown.md  lp_force_strike_experiment_v15_bucket_sensitivity.md  lp_force_strike_experiment_v16_execution_realism.md  lp_force_strike_experiment_v2_focus.md  lp_force_strike_experiment_v3_entry_exit.md  lp_force_strike_experiment_v4_stability.md  lp_force_strike_experiment_v5_h8_bridge.md  (+4 more)
strategies/majority_flush_strategy_lab/: PROJECT_STATE.md  START_HERE.md  pyproject.toml
(+286 files in other folders)
