[project]
name = "majority-flush-lab"
version = "0.1.0"
description = "Reusable LP-based Majority Flush displacement logic for TradingView inspection and MT5-data strategy research."
requires-python = ">=3.11"
dependencies = [
  "pandas"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
